﻿1.0.7
- show/highlight button
- mouse over text for inventory

1.0.6
- clear connections button
- connect nearby containers - with options? (Start & End coords maybe? Add commands?)

1.0.5
- fixing bugs introduced with the interface
- interface cannot be opened at the same time as the regular inventory

1.0.4
- Vintage Story 1.19.0 rc support
- You can control + right click on the storage controller to get a list of all items in the network
   - you can transfer one stack at a time by left clicking (shift+left clicking currently will just fail and give you ghost items)

1.0.3
- can now link storage controllers CTRL+LEFT Click with linker on a storage controller
- you can break a storage controller and have it maintain its link
   - note: if you want the controller to forget its settings then just recraft it with a linker tool
- new parts: storage controller upgrades!
   - you can upgrade from any lower tier direct to any upper tier with appropriate upgrade
   - eg: copper -> tinbronze, copper->cupronickel etc, iron->metoriciron, blackbronze->steel
   - you can't upgrade between the different bronzes though (so no tinbronze to blackbronze)
   - if the controller contains items it will drop them when you upgrade