@@ -83,8 +83,8 @@ namespace storagecontroller
             Composers[optionCompKey].AddAutoSizeHoverText("Links all chests in range", CairoFont.WhiteSmallText(), 300, button);
             button = button.BelowCopy();
 
-            Composers[optionCompKey].AddButton("Show/Hide", () => { return OnClickHighlightAttached(); }, button, CairoFont.WhiteSmallText(), EnumButtonStyle.Normal, "highlightbutton");
-            Composers[optionCompKey].AddAutoSizeHoverText("Show/Hide linked Chests", CairoFont.WhiteSmallText(), 300, button);
+            Composers[optionCompKey].AddButton("Highlight", () => { return OnClickHighlightAttached(); }, button, CairoFont.WhiteSmallText(), EnumButtonStyle.Normal, "highlightbutton");
+            Composers[optionCompKey].AddAutoSizeHoverText("Highlight linked containers and range", CairoFont.WhiteSmallText(), 300, button);
             button = button.BelowCopy();
 
             Composers[optionCompKey].Compose();
